[gd_scene load_steps=14 format=2]

[ext_resource path="res://Tiles/Fan/Fan_Side-1.png" type="Texture" id=1]
[ext_resource path="res://Tiles/light.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Fan.gd" type="Script" id=3]
[ext_resource path="res://Tiles/Fan/Fan_Side-3.png" type="Texture" id=4]
[ext_resource path="res://Tiles/Fan/Fan_Side-2.png" type="Texture" id=5]
[ext_resource path="res://Tiles/Fan/Fan_Up-1.png" type="Texture" id=6]
[ext_resource path="res://Tiles/Fan/Fan_Up-2.png" type="Texture" id=7]
[ext_resource path="res://Sounds/Jump.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/Spin.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.08422, 8.03533 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Spin",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="ParticlesMaterial" id=4]
trail_divisor = 4
emission_shape = 2
emission_box_extents = Vector3( 4, 2, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.7
scale_random = 0.41

[node name="Fan" type="KinematicBody2D"]
collision_layer = 515
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.05112, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
z_index = 2
frames = SubResource( 2 )
animation = "Idle"
speed_scale = 3.0
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.528558, 1.01612 )
scale = Vector2( 0.0238746, 0.0170678 )
z_index = 3
z_as_relative = false
texture = ExtResource( 2 )
texture_scale = 6.0
shadow_enabled = true
shadow_buffer_size = 75
shadow_gradient_length = 200.0
__meta__ = {
"_edit_lock_": true
}

[node name="Spin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -29.282
pitch_scale = 1.85

[node name="PlayerJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -21.526
pitch_scale = 0.77

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 257

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="WindFan" type="Particles2D" parent="."]
position = Vector2( 0, 5 )
z_index = 11
amount = 15
lifetime = 0.3
speed_scale = 2.0
process_material = SubResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
